# prd-agent

./: .gitignore  README.md  pyproject.toml
market_research/: agent.py  cli.py  pdf_renderer.py  web.py
market_research/prompts/: system_prompt.txt  task_template.txt
market_research/styles/: report.css
market_research/templates/: index.html
market_research/utils/: config.py
